--- a/style.scss
+++ b/style.scss
@@ -79,7 +79,7 @@
       }
 
       #sortable {
-        border: 1px dashed;
+        border: 1px dashed grey;
         width: 100%;
         min-height: 200px;
         padding-left: 0;
@@ -98,7 +98,6 @@
     padding-right: 20px;
     background-color: #666699;
     border-right-color: white ;
-    border-style: 1px white;
 
 }
 
